Fixes in graphs and dark mode

--- a/frontend/public/css/globals.css
+++ b/frontend/public/css/globals.css
@@ -23,6 +23,10 @@ body {
     line-height: 1.25;
 }
 
+body.dark-mode {
+    background-color: #2b3544;
+}
+
 aside.sidebar {
     background-color: var(--primary-color);
     color: snow;
@@ -93,6 +97,27 @@ aside.sidebar nav a:hover {
     background-color: var(--primary-color-light);
 }
 
+aside.sidebar #dark-mode-toggle {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    bottom: 1rem;
+    right: 1.5rem;
+    background: transparent;
+    border: none;
+    border-radius: 50%;
+    color: snow;    
+    cursor: pointer;
+    font-size: 1.25rem;
+    padding: 0.75rem;
+    width: 44px;
+    height: 44px;
+}
+
+aside.sidebar #dark-mode-toggle:hover {
+    background-color: var(--primary-color-light);
+}
+
 .content {
     flex-grow: 1;
     padding: 2.5rem;
@@ -118,7 +143,12 @@ header h1 {
     background-color: snow;
     border-radius: var(--border-radius);
     box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
-    padding: 1.5rem 1rem 2.5rem;
+    padding: 2rem 2rem 2rem;
+}
+
+body.dark-mode .content .container {
+    background-color: var(--primary-color);
+    color: snow;
 }
 
 .content .container h2 {
@@ -163,4 +193,14 @@ header h1 {
     background-color: var(--primary-color);
     color: snow;
     transition: all 0.2s;
+}
+
+body.dark-mode .glb-btn-main {
+    background-color: var(--secondary-color);
+    color: var(--primary-color)
+}
+
+body.dark-mode .glb-btn-main:hover {
+    background-color: var(--primary-color-light);
+    color: snow;    
 }
